--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,32 @@
 plugins {
-	id 'fabric-loom' version '1.2-SNAPSHOT'
+	id 'fabric-loom' version '1.6-SNAPSHOT'
 }
 
-sourceCompatibility = JavaVersion.VERSION_17
-targetCompatibility = JavaVersion.VERSION_17
+sourceCompatibility = JavaVersion.VERSION_21
+targetCompatibility = JavaVersion.VERSION_21
 
 archivesBaseName = project.archives_base_name
 version = "${project.mod_version}-${project.minecraft_version}"
 
 repositories {
-
+	maven{
+		name 'Xander Maven'
+		url 'https://maven.isxander.dev/releases'
+	}
+	maven { url "https://maven.terraformersmc.com/releases/" }
+	maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
 }
 
 dependencies {
+	implementation 'org.jetbrains:annotations:24.0.0'
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-
+	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	modApi "com.terraformersmc:modmenu:${project.modmenu}"
+	//modImplementation("dev.isxander.yacl:yet-another-config-lib-fabric:${project.yacl}")
+	modImplementation "dev.isxander:yet-another-config-lib:${project.yacl}"
 }
 
 processResources {
