--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,15 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.1
-loader_version=0.14.21
+minecraft_version=1.20.6
+yarn_mappings=1.20.6+build.1
+loader_version=0.15.11
 
 # Mod Properties
-mod_version = 1.1.0
-archives_base_name = PlayerHealthIndicators
+mod_version = 1.0.0
+archives_base_name = HealthIndicators
 
 # Dependencies
-fabric_version=0.83.1+1.20.1
+fabric_version=0.98.0+1.20.6
+yacl=3.4.0+1.20.5-fabric
+modmenu = 10.0.0-beta.1
