--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ yarn_mappings=1.20.6+build.1
 loader_version=0.15.11
 
 # Mod Properties
-mod_version = 1.0.0-beta
+mod_version = 2.0.1
 archives_base_name = HealthIndicators
 
 # Dependencies
