--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.20.6
-yarn_mappings=1.20.6+build.1
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.10
 loader_version=0.15.11
 
 # Mod Properties
@@ -11,6 +11,6 @@ mod_version = 2.2.0
 archives_base_name = HealthIndicators
 
 # Dependencies
-fabric_version=0.98.0+1.20.6
-yacl=3.4.0+1.20.5-fabric
-modmenu = 10.0.0-beta.1
+fabric_version=0.92.1+1.20.1
+yacl=3.4.0+1.20.1-fabric
+modmenu = 7.2.2
