--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ yarn_mappings=1.21+build.2
 loader_version=0.15.11
 
 # Mod Properties
-mod_version = 2.5.8
+mod_version = 3.0.0-beta
 archives_base_name = HealthIndicators
 
 # Dependencies
