--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,23 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+# Done to increase the memory available to Gradle.
+org.gradle.jvmargs=-Xmx2G
+org.gradle.parallel=true
 
-# Fabric Properties
-minecraft_version=1.21
-yarn_mappings=1.21+build.2
-loader_version=0.15.11
+# Mod properties
+mod_version = 4.0.0-alpha
+maven_group = io.github.adytech99.healthindicators
+archives_name = HealthIndicators
+enabled_platforms = fabric,neoforge
 
-# Mod Properties
-mod_version = 3.3.1
-archives_base_name = HealthIndicators
+# Minecraft properties
+minecraft_version = 1.21
+yarn_mappings = 1.21+build.1
 
 # Dependencies
-fabric_version=0.100.4+1.21
-yacl=3.5.0+1.21-fabric
+architectury_api_version = 13.0.2
+fabric_loader_version = 0.15.11
+fabric_api_version = 0.100.4+1.21
+neoforge_version = 21.0.40-beta
+yarn_mappings_patch_neoforge_version = 1.21+build.4
+yacl_fabric=3.5.0+1.21-fabric
+yacl_neoforge=3.5.0+1.21-neoforge
 modmenu = 11.0.0-beta.1
