--- a/build.gradle
+++ b/build.gradle
@@ -1,55 +1,74 @@
 plugins {
-	id 'fabric-loom' version '1.6-SNAPSHOT'
+    id 'dev.architectury.loom' version '1.6-SNAPSHOT' apply false
+    id 'architectury-plugin' version '3.4-SNAPSHOT'
+    id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
 }
 
-sourceCompatibility = JavaVersion.VERSION_21
-targetCompatibility = JavaVersion.VERSION_21
-
-archivesBaseName = project.archives_base_name
-version = "${project.mod_version}-${project.minecraft_version}"
-
-repositories {
-	maven{
-		name 'Xander Maven'
-		url 'https://maven.isxander.dev/releases'
-	}
-	maven { url "https://maven.terraformersmc.com/releases/" }
-	maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+architectury {
+    minecraft = project.minecraft_version
 }
 
-dependencies {
-	implementation 'org.jetbrains:annotations:24.0.0'
-	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-	// Fabric API. This is technically optional, but you probably want it anyway.
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	modApi "com.terraformersmc:modmenu:${project.modmenu}"
-	//modImplementation("dev.isxander.yacl:yet-another-config-lib-fabric:${project.yacl}")
-	modImplementation "dev.isxander:yet-another-config-lib:${project.yacl}"
-}
-loom{
-	accessWidenerPath = file("src/main/resources/healthindicators.accesswidener")
+allprojects {
+    group = rootProject.maven_group
+    version = rootProject.mod_version
 }
 
-processResources {
-	inputs.property "version", project.mod_version
+subprojects {
+    apply plugin: 'dev.architectury.loom'
+    apply plugin: 'architectury-plugin'
+    apply plugin: 'maven-publish'
 
-	filesMatching("fabric.mod.json") {
-		expand "version": project.mod_version
-	}
-}
+    base {
+        // Set up a suffixed format for the mod jar names, e.g. `example-fabric`.
+        archivesName = "$rootProject.archives_name-$project.name"
+    }
 
-tasks.withType(JavaCompile).configureEach {
-	it.options.release = 17
-}
+    repositories {
+        maven{
+            name 'Xander Maven'
+            url 'https://maven.isxander.dev/releases'
+        }
+        maven { url "https://maven.terraformersmc.com/releases/"}
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+    }
 
-java {
-	withSourcesJar()
-}
+    dependencies {
+        minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
+        mappings loom.layered {
+            it.mappings("net.fabricmc:yarn:$rootProject.yarn_mappings:v2")
+            it.mappings("dev.architectury:yarn-mappings-patch-neoforge:$rootProject.yarn_mappings_patch_neoforge_version")
+        }
+    }
 
-jar {
-	from("LICENSE") {
-		rename { "${it}_${project.archivesBaseName}"}
-	}
+    java {
+        // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
+        // if it is present.
+        // If you remove this line, sources will not be generated.
+        withSourcesJar()
+
+        sourceCompatibility = JavaVersion.VERSION_21
+        targetCompatibility = JavaVersion.VERSION_21
+    }
+
+    tasks.withType(JavaCompile).configureEach {
+        it.options.release = 21
+    }
+
+    // Configure Maven publishing.
+    publishing {
+        publications {
+            mavenJava(MavenPublication) {
+                artifactId = base.archivesName.get()
+                from components.java
+            }
+        }
+
+        // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
+        repositories {
+            // Add repositories to publish to here.
+            // Notice: This block does NOT have the same function as the block in the top level.
+            // The repositories here will be used for publishing your artifact, not for
+            // retrieving dependencies.
+        }
+    }
 }
