--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
 # Mod properties
-mod_version = 4.0.0-alpha
+mod_version = 4.1.0-beta
 maven_group = io.github.adytech99.healthindicators
 archives_name = HealthIndicators
 enabled_platforms = fabric,neoforge
