--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ subprojects {
             it.mappings("net.fabricmc:yarn:$rootProject.yarn_mappings:v2")
             it.mappings("dev.architectury:yarn-mappings-patch-neoforge:$rootProject.yarn_mappings_patch_neoforge_version")
         }
+        annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
+
     }
 
     java {
