--- a/common/build.gradle
+++ b/common/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     // Architectury API. This is optional, and you can comment it out if you don't need it.
     modImplementation "dev.architectury:architectury:$rootProject.architectury_api_version"
     modImplementation "dev.isxander:yet-another-config-lib:${project.yacl_fabric}"
+    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
     //modApi "com.terraformersmc:modmenu:${project.modmenu}"
 }
 
