--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:$rootProject.fabric_api_version"
     // Architectury API. This is optional, and you can comment it out if you don't need it.
     modImplementation "dev.architectury:architectury-fabric:$rootProject.architectury_api_version"
+    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
     modImplementation "net.fabricmc.fabric-api:fabric-api:$rootProject.fabric_api_version"
     modApi "com.terraformersmc:modmenu:${project.modmenu}"
