--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
 # Mod properties
-mod_version = 4.1.1-beta
+mod_version = 4.1.3
 maven_group = io.github.adytech99.healthindicators
 archives_name = HealthIndicators
 enabled_platforms = fabric,neoforge
@@ -20,4 +20,4 @@ neoforge_version = 21.0.40-beta
 yarn_mappings_patch_neoforge_version = 1.21+build.4
 yacl_fabric=3.5.0+1.21-fabric
 yacl_neoforge=3.5.0+1.21-neoforge
-modmenu = 11.0.0-beta.1
+modmenu = 11.0.1
