--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
 # Mod properties
-mod_version = 4.5.0+1.21
+mod_version = 21.0.20
 maven_group = io.github.adytech99.healthindicators
 archives_name = HealthIndicators
 enabled_platforms = fabric,neoforge
