--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'dev.architectury.loom' version '1.6-SNAPSHOT' apply false
+    id 'dev.architectury.loom' version '1.7-SNAPSHOT' apply false
     id 'architectury-plugin' version '3.4-SNAPSHOT'
     id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
     id 'io.github.pacifistmc.forgix' version "1.2.9"
@@ -47,6 +47,7 @@ subprojects {
         }
         maven { url "https://maven.terraformersmc.com/releases/"}
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+        maven { url 'https://repo.spongepowered.org/repository/maven-public/' }
     }
 
     dependencies {
