--- a/gradle.properties
+++ b/gradle.properties
@@ -3,21 +3,21 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
 # Mod properties
-mod_version = 21.1.2
+mod_version = 21.2.0
 maven_group = io.github.adytech99.healthindicators
 archives_name = HealthIndicators
 enabled_platforms = fabric,neoforge
 
 # Minecraft properties
-minecraft_version = 1.21.1
-yarn_mappings=1.21.1+build.3
+minecraft_version = 1.21.2
+yarn_mappings=1.21.2+build.1
 
 # Dependencies
-architectury_api_version = 13.0.6
-fabric_loader_version = 0.16.0
-fabric_api_version = 0.102.1+1.21.1
-neoforge_version = 21.1.18
+architectury_api_version = 14.0.3
+fabric_loader_version = 0.16.7
+fabric_api_version = 0.106.1+1.21.2
+neoforge_version = 21.2.0-beta
 yarn_mappings_patch_neoforge_version = 1.21+build.4
-yacl_fabric=3.5.0+1.21-fabric
-yacl_neoforge=3.5.0+1.21-neoforge
-modmenu = 11.0.1
+yacl_fabric=3.6.1+1.21.2-fabric
+yacl_neoforge=3.6.1+1.21.2-neoforge
+modmenu = 12.0.0-beta.1
