--- a/common/build.gradle
+++ b/common/build.gradle
@@ -9,6 +9,7 @@ repositories {
     }
     maven { url "https://maven.terraformersmc.com/releases/" }
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+    maven { url 'https://repo.spongepowered.org/repository/maven-public/' }
 }
 
 dependencies {
