--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
 # Mod properties
-mod_version = 21.2.2
+mod_version = 21.2.2-beta
 maven_group = io.github.adytech99.healthindicators
 archives_name = HealthIndicators
 enabled_platforms = fabric,neoforge
@@ -13,7 +13,7 @@ minecraft_version = 1.21.2
 yarn_mappings=1.21.2+build.1
 
 # Dependencies
-architectury_api_version = 14.0.3
+architectury_api_version = 14.0.4
 fabric_loader_version = 0.16.7
 fabric_api_version = 0.106.1+1.21.2
 neoforge_version = 21.2.0-beta
