--- a/gradle.properties
+++ b/gradle.properties
@@ -3,21 +3,21 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
 # Mod properties
-mod_version = 21.2.3-beta
+mod_version = 21.5.0-beta
 maven_group = io.github.adytech99.healthindicators
 archives_name = HealthIndicators
 enabled_platforms = fabric,neoforge
 
 # Minecraft properties
-minecraft_version = 1.21.2
-yarn_mappings=1.21.2+build.1
+minecraft_version = 1.21.5
+yarn_mappings=1.21.5+build.1
 
 # Dependencies
-architectury_api_version = 14.0.4
-fabric_loader_version = 0.16.7
-fabric_api_version = 0.106.1+1.21.2
-neoforge_version = 21.2.0-beta
+architectury_api_version = 16.1.4
+fabric_loader_version = 0.16.10
+fabric_api_version=0.121.0+1.21.5
+neoforge_version = 21.5.55-beta
 yarn_mappings_patch_neoforge_version = 1.21+build.4
-yacl_fabric=3.6.1+1.21.2-fabric
-yacl_neoforge=3.6.1+1.21.2-neoforge
-modmenu = 12.0.0-beta.1
+yacl_fabric=3.6.6+1.21.5-fabric
+yacl_neoforge=3.6.6+1.21.5-neoforge
+modmenu = 14.0.0-rc.2
