--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.github.johnrengelman.shadow'
+    id 'org.jetbrains.kotlin.jvm' version '2.0.21'
 }
 
 architectury {
@@ -29,6 +30,10 @@ repositories {
         name = 'NeoForged'
         url = 'https://maven.neoforged.net/releases'
     }
+    maven {
+        name = 'Kotlin for Forge'
+        url = 'https://thedarkcolour.github.io/KotlinForForge/'
+    }
 }
 
 loom {
@@ -40,8 +45,8 @@ dependencies {
 
     // Architectury API. This is optional, and you can comment it out if you don't need it.
     modImplementation "dev.architectury:architectury-neoforge:$rootProject.architectury_api_version"
-
     modImplementation "dev.isxander:yet-another-config-lib:${project.yacl_neoforge}"
+    implementation 'thedarkcolour:kotlinforforge-neoforge:5.6.0'
 
     common(project(path: ':common', configuration: 'namedElements')) { transitive false }
     shadowBundle project(path: ':common', configuration: 'transformProductionNeoForge')
